# fiji

./: .gitignore  Fakefile  ImageJ.c
src-plugins/: pom.xml
src-plugins/KNN_Segmentation/: Dictionary.java  KNN_Segmentation.java  Patch.java
src-plugins/MSER_/: MSER.java  MSER_.java  Region.java  RegionFactory.java
src-plugins/MSER_/mser/: MSER.java  Region.java
src-plugins/Sipnet_/: AStarSearch.java  Assignment.java  AssignmentModel.java  AssignmentSearch.java  Candidate.java  CandidateFactory.java  CandidateSelector.java  CplexSolver.java  Estimate_Parameters.java  GlpkSolver.java  IO.java  KLDivergence.java  LinearProgramSolver.java  PixelComparator.java  README  RandomEvent.java  ResultCacher.java  SearchNode.java  Sequence.java  SequenceNode.java  SequenceSearch.java  SetDifference.java  ShapeDissimilarity.java  SingleAssignment.java  Sipnet.java  Sipnet_.java  Texifyer.java  Visualisation.java  Visualiser.java  Visualiser3D.java
src-plugins/Sipnet_/ipopt/src/: CMakeLists.txt  interface.cxx  interface.h  interface.i
src-plugins/Sipnet_/ipopt/src/cmake/: FindCoinHsl.cmake  FindCoinMetis.cmake  FindCoinMumps.cmake  FindIPOPT.cmake
src-plugins/Sipnet_/sipnet/: AStarSearch.java  Assignment.java  AssignmentModel.java  Candidate.java  CandidateFactory.java  CandidateSelector.java  ConnectedComponents.java  CplexSolver.java  Evaluator.java  GlpkSolver.java  GraphicalModelSolver.java  GroundTruth.java  IpOptSolver.java  KLDivergence.java  MergeAssignment.java  (+18 more)
src-plugins/fiji-compat/: pom.xml
src-plugins/fiji-lib/: pom.xml
src-plugins/ij-launcher/: pom.xml
(+4 files in other folders)
